--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- DataTables -->
+    <!-- DataTables + Responsive -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css">
 
     <style>
         body {
@@ -32,31 +33,31 @@
             color:white;
         }
 
-        /* Biar tampilan desktop tetap sama di HP (tidak mengecil) */
-        .table-responsive {
-            overflow-x: auto !important;
-            -webkit-overflow-scrolling: touch;
-        }
-
+        /* Biarkan tabel normal di desktop */
         table.dataTable {
             width: 100% !important;
-            white-space: nowrap; /* kolom tidak turun */
         }
 
-        @media (max-width: 768px) {
-            body {
-                zoom: 0.85; /* opsional, biar pas di HP */
+        /* Tampilan HP */
+        @media (max-width: 576px) {
+            #example {
+                font-size: 12px;   /* kecilkan font tabel */
+            }
+
+            table.dataTable thead th,
+            table.dataTable tbody td {
+                white-space: normal !important; /* kolom turun baris */
             }
         }
     </style>
 </head>
+
 <body>
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-custom shadow">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">SorongTechOne</a>
-
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -111,7 +112,7 @@
             <div class="card-body">
 
                 <div class="table-responsive">
-                    <table id="example" class="table table-striped" style="width:100%">
+                    <table id="example" class="table table-striped table-bordered display nowrap" style="width:100%">
                         <thead>
                             <tr>
                                 <th>Nama</th>
@@ -144,7 +145,7 @@
 
     </div>
 
-    <!-- SCRIPTS -->
+    <!-- JS SETUP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
@@ -152,14 +153,19 @@
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
 
+    <!-- DataTables Responsive -->
+    <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap5.min.js"></script>
+
     <!-- Feather Icons -->
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
     <script>
         $(document).ready(function(){
             $('#example').DataTable({
-                responsive: false,  // MATIKAN responsif
-                scrollX: true       // scroll horizontal aktif
+                responsive: true,      // versi responsive aktif
+                scrollX: false,        // HP tidak perlu scroll horizontal
+                autoWidth: false
             });
         });
 
