--- a/index.html
+++ b/index.html
@@ -406,15 +406,15 @@ React.useEffect(() => {
             <div className="row align-items-center">
               <div className="col-md-6">
                 <h1 className="h3 mb-1">
-                  <i className="fas fa-users me-2"></i>
-                  Client Dashboard
-                </h1>
-                <p className="mb-0">Monitor your clients in real-time</p>
+  <i className="fas fa-laptop-code me-2"></i>
+  Client.SorongTechOne.com
+</h1>
+<p className="mb-0">Client Dashboard</p>
               </div>
               <div className="col-md-6 text-md-end">
                 <div className="d-flex justify-content-md-end align-items-center gap-3">
                   <div className="last-updated">
-  Current time: {currentTime.toLocaleTimeString()}
+  Waktu Sekarang: {currentTime.toLocaleTimeString()}
 </div>
                   <button 
                     className="refresh-btn"
@@ -541,8 +541,8 @@ React.useEffect(() => {
               <table className="table table-hover mb-0">
                 <thead>
                   <tr>
-                    <th>Client Name</th>
-                    <th>System Type</th>
+                    <th>Nama Client</th>
+                    <th>Jenis Sistem</th>
                     <th>Waktu Pengerjaan</th>
                     <th>Status</th>
                   </tr>
