--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@ const renderMobileCards = () => {
         <div className="card-body">
           <div className="d-flex justify-content-between">
             <div>
-              <h6 className="card-title text-muted mb-2">Menunggu</h6>
+              <h6 className="card-title text-muted mb-2">Pending</h6>
               <h3 className="mb-0">
                 {data.filter(item => 
                   item.status && item.status.toLowerCase().includes("pending")
