--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@ const renderMobileCards = () => {
       <div className="card stats-card stats-card-mobile">
         <div className="card-body py-2">
           <div className="text-center">
-            <h6 className="card-title text-muted mb-1">Menunggu</h6>
+            <h6 className="card-title text-muted mb-1">Pending</h6>
             <h4 className="mb-0 text-warning">
               {data.filter(item => 
                 item.status && item.status.toLowerCase().includes("pending")
