--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 <!-- Primary Meta Tags -->
 <title>Client.SorongTechOne.com - Dashboard Client Profesional</title>
-<meta name="title" content="Client.SorongTechOne.com - Dashboard Client Profesional">
-<meta name="description" content="Kelola dan pantau semua client proyek IT Anda secara real-time. Website development, mobile apps, dan sistem custom untuk bisnis Anda.">
-<meta name="keywords" content="sorong tech, web development, aplikasi android, website, sistem IT, client dashboard, proyek IT">
+<meta name="title" content="Dashboard Client">
+<meta name="description" content="Sistem Monitoring Client Realtime #X-LORD">
+<meta name="keywords" content="Sorong Tech One, Web Development, Aplikasi Android, Website, Sistem IT, Client Dashboard, Proyek IT">
 <meta name="author" content="SorongTechOne">
 <meta name="robots" content="index, follow">
 <meta name="language" content="Indonesian">
@@ -36,15 +36,15 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://client.sorongtechone.com/">
-<meta property="og:title" content="Client.SorongTechOne.com - Dashboard Client Profesional">
+<meta property="og:title" content="Sistem Monitoring Client Realtime #X-LORD">
 <meta property="og:description" content="Kelola dan pantau semua client proyek IT Anda secara real-time">
 <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/1688/1688400.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://client.sorongtechone.com/">
-<meta property="twitter:title" content="Client.SorongTechOne.com - Dashboard Client Profesional">
-<meta property="twitter:description" content="Kelola dan pantau semua client proyek IT Anda secara real-time">
+<meta property="twitter:title" content="Dashboard Client">
+<meta property="twitter:description" content="Sistem Monitoring Client Realtime #X-LORD"">
 <meta property="twitter:image" content="https://cdn-icons-png.flaticon.com/512/1688/1688400.png">
 
 <!-- Theme Color -->
