--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <!-- Primary Meta Tags -->
-<title>Client.SorongTechOne.com - Dashboard Client Profesional</title>
+<title>Sistem Monitoring Client - SorongTechOne.com</title>
 <meta name="title" content="Dashboard Client">
-<meta name="description" content="Sistem Monitoring Client Realtime #X-LORD">
-<meta name="keywords" content="Sorong Tech One, Web Development, Aplikasi Android, Website, Sistem IT, Client Dashboard, Proyek IT">
+<meta name="description" content="Firebase Client Realtime #X-LORD">
+<meta name="keywords" content="Sorong Tech One, SorongTechOne.com, SorongTechOne, Web Development, Aplikasi Android, Website, Sistem IT, Client Dashboard, Proyek IT">
 <meta name="author" content="SorongTechOne">
 <meta name="robots" content="index, follow">
 <meta name="language" content="Indonesian">
@@ -36,15 +36,15 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://client.sorongtechone.com/">
-<meta property="og:title" content="Sistem Monitoring Client Realtime #X-LORD">
-<meta property="og:description" content="Kelola dan pantau semua client proyek IT Anda secara real-time">
+<meta property="og:title" content="Sistem Monitoring Client - SorongTechOne.com">
+<meta property="og:description" content="Firebase Client Realtime #X-LORD">
 <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/1688/1688400.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://client.sorongtechone.com/">
 <meta property="twitter:title" content="Dashboard Client">
-<meta property="twitter:description" content="Sistem Monitoring Client Realtime #X-LORD"">
+<meta property="twitter:description" content="Firebase Client Realtime #X-LORD"">
 <meta property="twitter:image" content="https://cdn-icons-png.flaticon.com/512/1688/1688400.png">
 
 <!-- Theme Color -->
